--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
 
-    compileOptions{
+    compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
@@ -39,5 +39,7 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //解决内存泄漏
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    //
+    implementation 'com.squareup.okhttp:okhttp:2.7.2'
 
 }
